--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,6 @@
     "isolatedModules": true,
     "jsx": "react-jsx"
   },
-  "include": ["src/**/*"],
+  "include": ["src", "src/types/**/*.d.ts"],
   "exclude": ["node_modules", "dist"]
 }
